--- a/aman.html
+++ b/aman.html
@@ -1,7 +1,3 @@
 hii this is aman
 hii this is rjt
-<<<<<<< HEAD
-fine
-=======
-hii this is me
->>>>>>> 2ceac66a80a658c4326a8e4be02c6771583b108b
+hii this is jack
